<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">品红</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_title">品红</string>
    <string name="page_home">首页</string>
    <string name="page_comm">社区</string>
    <string name="page_setting">设置</string>
    <string name="iv_content_home"></string>
    <string name="iv_content_comm"></string>
    <string name="iv_content_setting"></string>
    <string name="appexception">程序发现异常，稍后将重新启动</string>
    <string name="menu_item_clear_memory_cache">清理内存缓存</string>
    <string name="menu_item_clear_disc_cache">清理SD卡缓存</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="updatetime">上次更新时间:</string>
    <string name="ganggangstr">刚刚</string>
    <string name="netexception">网络异常，请检查网络</string>
    <string name="nodata">暂无数据显示</string>
    <string name="exit">再按一次退出应用</string>
    <string name="lifepic">生活美图</string>
    <string name="nodatashow">没有更多数据了</string>
    <string name="picshow">美图预览</string>
    <string name="logoalert">天塌了，记住有我</string>
    <string name="logoname">陪你开心生活每一天</string>
    <string name="picclassfiy">美图分类</string>
    <string name="title_activity_setting">设置</string>
    <string name="title_login">登录</string>
    <string name="phone_login_register"><u>手机登录/注册</u></string>
    <string name="register_notify_info"><u>没有账号？注册</u></string>
    <string name="forget_passwd_info"><u>忘记密码？</u></string>
    <string name="title_activity_pine_info">PineInfoActivity</string>
    <string name="title_activity_pine_detail">PineDetailActivity</string>

</resources>